Support links to ramp/docs and adminSettings

--- a/settings/Smart/admissMenu.ini
+++ b/settings/Smart/admissMenu.ini
@@ -23,5 +23,5 @@ applicant.url.activity = 'Smart/Student/admiss.act'
 helpMenu.title = 'Help'
 helpMenu.url.controller = 'activity'
 helpMenu.url.action = 'index'
-helpMenu.url.activity = '../docs/NjalaDocs/index.act'
+helpMenu.url.activity = '../docs/index.act'
 
