--- a/settings/Smart/dbaMenu.ini
+++ b/settings/Smart/dbaMenu.ini
@@ -28,5 +28,5 @@ users.url.activity = 'Admin/smartAdmin.act'
 helpMenu.title = 'Help'
 helpMenu.url.controller = 'activity'
 helpMenu.url.action = 'index'
-helpMenu.url.activity = '../docs/NjalaDocs/index.act'
+helpMenu.url.activity = '../docs/index.act'
 
