--- a/settings/Smart/finMenu.ini
+++ b/settings/Smart/finMenu.ini
@@ -33,5 +33,5 @@ student.url.activity = 'Smart/Student/finIndex.act'
 helpMenu.title = 'Help'
 helpMenu.url.controller = 'activity'
 helpMenu.url.action = 'index'
-helpMenu.url.activity = '../docs/NjalaDocs/index.act'
+helpMenu.url.activity = '../docs/index.act'
 
