--- a/settings/Smart/hrMenu.ini
+++ b/settings/Smart/hrMenu.ini
@@ -28,5 +28,5 @@ staff.url.activity = "Smart/Staff/index.act"
 helpMenu.title = 'Help'
 helpMenu.url.controller = 'activity'
 helpMenu.url.action = 'index'
-helpMenu.url.activity = '../docs/NjalaDocs/index.act'
+helpMenu.url.activity = '../docs/index.act'
 
