--- a/settings/Smart/ssMenu.ini
+++ b/settings/Smart/ssMenu.ini
@@ -28,5 +28,5 @@ student.url.activity = 'Smart/Student/index.act'
 helpMenu.title = 'Help'
 helpMenu.url.controller = 'activity'
 helpMenu.url.action = 'index'
-helpMenu.url.activity = '../docs/NjalaDocs/index.act'
+helpMenu.url.activity = '../docs/index.act'
 
