Add reference to rampREADME.md

--- a/configs/smart_defaults.ini
+++ b/configs/smart_defaults.ini
@@ -68,11 +68,15 @@ ramp.aclNonGuestRole.developer[] = smart_dba
 ; implicitly in the Authorizations table.
 ramp.aclResources[] = "activity::index::../docs/smartDocs"
 ramp.aclResources[] = "document::index::smartDocs"
+ramp.aclResources[] = "activity::index::../docs/NjalaDocs"
+ramp.aclResources[] = "document::index::NjalaDocs"
 
 ; Define additional Access Control List (ACL) rules.  Format:
 ;    "role::resource"
 ramp.aclRules[] = "guest::activity::index::../docs/smartDocs"
 ramp.aclRules[] = "guest::document::index::smartDocs"
+ramp.aclRules[] = "guest::activity::index::../docs/NjalaDocs"
+ramp.aclRules[] = "guest::document::index::NjalaDocs"
 
 ; Define properties that control the activities and table settings available.
 ramp.menuFilename = "Smart/menu.ini"
