Fix broken link from settings/devMenu.ini

--- a/settings/devMenu.ini
+++ b/settings/devMenu.ini
@@ -43,5 +43,5 @@ users.url.activity = 'Admin/smartAdmin.act'
 helpMenu.title = 'Help'
 helpMenu.url.controller = 'activity'
 helpMenu.url.action = 'index'
-helpMenu.url.activity = '../docs/rampDocs/devIndex.act'
+helpMenu.url.activity = '../docs/index.act'
 
