Add document::index::.. as a resource

--- a/configs/smart_defaults.ini
+++ b/configs/smart_defaults.ini
@@ -66,6 +66,7 @@ ramp.aclNonGuestRole.developer[] = smart_dba
 ; ramp.activitiesDirectory and ramp.documentRoot properties, respectively.
 ; Other resources are defined explicitly in Ramp/Smart source code or
 ; implicitly in the Authorizations table.
+ramp.aclResources[] = "document::index::.."
 ramp.aclResources[] = "activity::index::../docs/smartDocs"
 ramp.aclResources[] = "document::index::smartDocs"
 ramp.aclResources[] = "activity::index::../docs/NjalaDocs"
@@ -73,6 +74,7 @@ ramp.aclResources[] = "document::index::NjalaDocs"
 
 ; Define additional Access Control List (ACL) rules.  Format:
 ;    "role::resource"
+ramp.aclRules[] = "guest::document::index::.."
 ramp.aclRules[] = "guest::activity::index::../docs/smartDocs"
 ramp.aclRules[] = "guest::document::index::smartDocs"
 ramp.aclRules[] = "guest::activity::index::../docs/NjalaDocs"
@@ -127,7 +129,7 @@ resources.db.params.password = "need_password"
 
 ; Define the name of the database holding the data.
 ; resources.db.params.dbname = smart
-;    (needs to be set separately in each section)
+;    (needs to be set separately for each environment)
 
 ; Define properties that control the look and feel.
 ramp.title = "Smart"
