--- a/configs/ramp_defaults.ini
+++ b/configs/ramp_defaults.ini
@@ -67,9 +67,11 @@ ramp.initialActivity = "index.act"
 ; development, or testing environments.)  The initial properties in this
 ; section act as defaults for other environments.
 
-; Define properties for accessing the database.
+; Define the username and password for accessing the database.
 resources.db.params.username = rampuser
 resources.db.params.password = "need_password"
+
+; Define the name of the database holding the data.
 ; resources.db.params.dbname = ramp_db
 ;    (needs to be set separately for each environment)
 
@@ -79,5 +81,4 @@ ramp.subtitle = "Record and Activity Management Program"
 ramp.applicationShortName = "RAMP"
 ; ramp.footer = "Kalamazoo College"
 ramp.icon = "/images/redSmart.ico"
-ramp.css = "/css/site.css"
 
