Change ../docs to ../../docs after moving settings to language specific folder

--- a/settings/en/Smart/menu.ini
+++ b/settings/en/Smart/menu.ini
@@ -20,5 +20,5 @@ classes.url.activity = 'Smart/Curriculum/pubClass.act'
 helpMenu.title = 'Help'
 helpMenu.url.controller = 'activity'
 helpMenu.url.action = 'index'
-helpMenu.url.activity = '../docs/index.act'
+helpMenu.url.activity = '../../docs/index.act'
 
