--- a/settings/en/Smart/secMenu.ini
+++ b/settings/en/Smart/secMenu.ini
@@ -38,5 +38,5 @@ student.url.activity = 'Smart/Student/index.act'
 helpMenu.title = 'Help'
 helpMenu.url.controller = 'activity'
 helpMenu.url.action = 'index'
-helpMenu.url.activity = '../docs/index.act'
+helpMenu.url.activity = '../../docs/index.act'
 
