--- a/settings/en/devMenu.ini
+++ b/settings/en/devMenu.ini
@@ -43,5 +43,5 @@ users.url.activity = 'Admin/smartAdmin.act'
 helpMenu.title = 'Help'
 helpMenu.url.controller = 'activity'
 helpMenu.url.action = 'index'
-helpMenu.url.activity = '../docs/index.act'
+helpMenu.url.activity = '../../docs/index.act'
 
