Improve report formatting
Include support for two new properties in table settings:
  -- suppressIfSame: do not repeat a field's value in every row,
     only include it if it is different from value in previous row
  -- displayInRow: in split view, keep this field with the data that
     is printed per row rather than including it with shared data at the
     top of the report, even if the value is the same for all rows

--- a/settings/Smart/Curriculum/AcadProgram.ini
+++ b/settings/Smart/Curriculum/AcadProgram.ini
@@ -22,15 +22,12 @@ tableDescription = "Academic Programs (Courses of Study)"
 tableSortOrder = "schoolCode, deptCode, shortTitle"
 
 field.programID.label = "ID"
-field.programID.footnote = "Set automatically; do not update!"
 field.shortTitle.label = "Short Title"
 field.title.label = "Title"
 field.schoolCode.label = "School"
-field.schoolCode.footnote = "Every program should be tied to a school or dept"
 field.schoolCode.selectFrom = Schools.code
 ; field.division.label = "Division"
 field.deptCode.label = "Department"
-field.deptCode.footnote = "Every program should be tied to a school or dept"
 field.deptCode.selectFrom = Departments.code
 field.type.label = "Type"
 field.type.selectFrom = "AcadProgramTypes.type"
@@ -39,6 +36,8 @@ field.startDate.footnote = "yyyy-mm-dd"
 field.startDate.recommended = true
 field.endDate.label = "End Date"
 field.endDate.footnote = "yyyy-mm-dd"
+
+field.programID.hide = true
 
 [ Selection : Base ]
 
@@ -49,9 +48,16 @@ field.endDate.hide = true
 
 [ AddEdit : Base ]
 
+field.programID.hide = false
+
 field.programID.readOnly = true
+field.programID.footnote = "Set automatically; do not update!"
+field.schoolCode.footnote = "Every program should be tied to a school or dept"
+field.deptCode.footnote = "Every program should be tied to a school or dept"
 
 [ DetailedView : Base ]
+
+field.programID.hide = false
 
 field.updated.label = "Last Updated"
 field.updated.hide = true;
