--- a/settings/Smart/Curriculum/ModuleSelection.ini
+++ b/settings/Smart/Curriculum/ModuleSelection.ini
@@ -2,6 +2,7 @@
 
 tableName = "Modules"
 
+tableConnection.Departments = "Modules.deptCode = Departments.code"
 tableTitle = "Course Definitions"
 tableDescription = "Basic, Persistent Information about Courses"
 tableSortOrder = "modCode, modNumber"
@@ -15,6 +16,8 @@ field.shortTitle.label = "Short Title"
 field.shortTitle.footnote = "For schedule & transcripts: Max of 30 Characters"
 field.longTitle.label = "Long Title"
 field.longTitle.footnote = "For course catalog; Max of 60 Characters"
+field.schoolCode.label = "School"
+field.schoolCode.importedFrom = "Departments"
 field.deptCode.label = "Department"
 field.startDate.label = "Approved"
 field.startDate.footnote = "yyyy-mm-dd"
