--- a/settings/Smart/Curriculum/Modules.ini
+++ b/settings/Smart/Curriculum/Modules.ini
@@ -22,10 +22,8 @@ tableSortOrder = "schoolCode, deptCode, modCode, modNumber"
 
 tableTitle = "Course Definitions"
 tableDescription = "Basic, Persistent Information about Courses"
-tableSortOrder = "modCode, modNumber"
 
 field.moduleID.label = "Course id"
-field.moduleID.footnote = "Set automatically; do not update!"
 field.modCode.label = "Code"
 field.modNumber.label = "Number"
 field.modCodeNum.label = "Course Code"
@@ -49,26 +47,18 @@ field.startDate.label = "Approved"
 field.startDate.footnote = "yyyy-mm-dd"
 field.endDate.label = "End Date"
 field.endDate.footnote = "yyyy-mm-dd"
+field.startEnd.label = "Approved/Ended"
+field.startEnd.expression = "RampConcat(Modules.startDate, Modules.endDate, '/')"
+field.startEnd.footnote = "Approved yyyy-mm-dd/Ended yyyy-mm-dd"
 
 field.modCodeNum.hide = true
-
-[ ReportViews : Base ]
-
-field.modCodeNum.hide = false
-
-field.moduleID.hide = true
-field.modCode.hide = true
-field.modNumber.hide = true
-; field.status.hide = true
-field.capacity.hide = true
-field.type.hide = true
-field.startDate.hide = true
-field.endDate.hide = true
+field.startEnd.hide = true
 
 [ ModifyingViews : Base ]
 
 ; Setting for adding or editing Modules.
 
+field.moduleID.footnote = "Set automatically; do not update!"
 field.capacity.hide = false
 field.descriptionKey.hide = false
 field.capacity.recommended = true
@@ -95,4 +85,24 @@ externalTableRef.ModuleOfferings.title = "Offerings"
 externalTableRef.ModuleOfferings.viewingSequence = Smart/Curriculum/ModuleOfferings
 externalTableRef.ModuleOfferings.localField = "moduleID"
 externalTableRef.ModuleOfferings.externalField = "moduleID"
+
+[ ReportViews : Base ]
+
+tableTitle = "Course List"
+tableDescription = ""
+
+field.moduleID.hide = true
+
+field.schoolCode.suppressIfSame = true
+field.deptCode.suppressIfSame = true
+field.modCode.suppressIfSame = true
+
+field.modCode.displayInRow = true
+field.creditHours.displayInRow = true
+
+field.startDate.hide = true
+field.endDate.hide = true
+field.startEnd.hide = false
+
+field.capacity.hide = true
 
