--- a/settings/Smart/Curriculum/ProgPlanOfStudy.ini
+++ b/settings/Smart/Curriculum/ProgPlanOfStudy.ini
@@ -5,8 +5,8 @@ tableName = "ProgPlanOfStudy"
 sequence.setting = DetailedView
 sequence.addSetting = Base
 sequence.editSetting = Base
-sequence.splitViewSetting = Base
-sequence.tabularSetting = Base
+sequence.splitViewSetting = ReportView
+sequence.tabularSetting = ReportView
 sequence.searchSpecSetting = Base
 sequence.searchResultsSetting = Selection
 sequence.deleteSetting = Selection
@@ -30,16 +30,25 @@ field.schoolCode.importedFrom = "AcadProgram"
 field.schoolCode.selectFrom = Schools.code
 field.year.label = "Year Number"
 field.semester.label = "Semester Number"
+field.yearSem.label = "Year, Semester"
+field.yearSem.expression = "RampConcat(year, semester, ', ')"
 field.moduleID.label = "Course ID"
 field.moduleID.selectUsing = "Smart/Curriculum/Modules"
 field.modCode.label = "Course Code"
 field.modCode.importedFrom = "Modules"
 field.modNumber.label = "Number"
 field.modNumber.importedFrom = "Modules"
+field.modCodeNum.label = "Course Code"
+field.modCodeNum.expression = "RampConcat(Modules.modCode, Modules.modNumber, ' ')"
 field.modShortTitle.label = "Course Name"
 field.modShortTitle.importedFrom = "Modules"
 field.modShortTitle.importedField = "shortTitle"
+field.creditHours.label = "Credit Hrs"
+field.creditHours.importedFrom = "Modules"
 field.required.label = "Required/Elective"
+
+field.yearSem.hide = true
+field.modCodeNum.hide = true
 
 [ Selection : Base ]
 
@@ -60,4 +69,24 @@ externalTableRef.CourseInfo.title = "Course Info"
 externalTableRef.CourseInfo.viewingSequence = Smart/Curriculum/Modules
 externalTableRef.CourseInfo.localField = "moduleID"
 externalTableRef.CourseInfo.externalField = "moduleID"
+
+[ ReportView : Base ]
+
+field.programID.hide = true
+
+field.shortTitle.suppressIfSame = true
+field.schoolCode.suppressIfSame = true
+
+field.year.hide = true
+field.semester.hide = true
+field.yearSem.hide = false
+field.yearSem.suppressIfSame = true
+
+field.moduleID.hide = true
+field.modCode.hide = true
+field.modNumber.hide = true
+field.modCodeNum.hide = false
+
+field.modCode.displayInRow = true
+field.creditHours.displayInRow = true
 
